--- a/book/003-io.md
+++ b/book/003-io.md
@@ -27,11 +27,11 @@ More new stuff, lets take a look:
 
 The `Result(T, E)` type is a really nice one. For you rustaceans it's about identical to Rust's `Result<T, E>`. 
 
-A result is a type that has 2 variants: `succ(T)` and `fail(F)`. It means each variant may have a payload value. In the function type `Result(Void, #failure)` we expect the function to return either `succ` (with no payload) or `err(...)` with a payload value of type `#failure`.
+A result is a type that has 2 variants: `succ(T)` and `err(E)`. It means each variant may have a payload value. In the function type `Result(Void, #failure)` we expect the function to return either `succ` (with no payload) or `err(...)` with a payload value of type `#failure`.
 
 `#error` is a tag, tags will be explained later but thing of a tag as a Java interface. It can be used as a type that a lot of different types can be casted to. It represents the group of types that can be used to represent a failure. For instance a `String` is tagged as `#error` since it can be used as a simple generic error message.
 
-`readln` is a function that takes no arguments and return `Result(String, IOError)` so we can use `??` to extract the `String` if it's a `succ` or early return from `main` if it's a `fail` (`IOError` is `#error`)
+`readln` is a function that takes no arguments and return `Result(String, IOError)` so we can use `??` to extract the `String` if it's a `succ` or early return from `main` if it's an `err` (`IOError` is `#error`)
 
 There are some operators for the `Result` type, they are:
 - `res??` unwraps the result `res` if `succ` otherwise shortcircuits the function with `err`
