book syntax upgrade
Signed-off-by: OJarrisonn <j.h.m.t.v.10@gmail.com>

--- a/book/003-io.md
+++ b/book/003-io.md
@@ -5,37 +5,37 @@ Lets create a simple program to greet our user
 ```rs
 //! main.aura
 
-main -> Result(Void, #error) {
+func main -> Result(Void, Error) {
     print("Hey, what's your name? "); //>> Hey, what's your name?
 
     name String := readln()??; //<< Aura Lang
     
     println("Nice to meet you " ++ name); //>> Nice to meet you Aura Lang
 
-    succ
+    ok
 }
 ```
 
 More new stuff, lets take a look:
 
-- `Result(Void, #error)`: remember from the chapter one, when we said safe abstractions? This type represents something that might fails, we'll talk about them soon
-- `readln()??`: this function reads a line from the terminal as a `String` but this operation might fail (say when pressing `ctrl+c`) so `??` will unwrap the `String` if it succeds or finishes the current function if it fails
+- `Result(Void, Error)`: remember from the chapter one, when we said safe abstractions? This type represents something that might fails, we'll talk about them soon
+- `readln()??`: this function reads a line from the terminal as a `String` but this operation might fail (say when pressing `ctrl+c`) so `??` will unwrap the `String` if it succeeds or finishes the current function if it fails
 - `"Nice to meet you " ++ name` this concatenates (ie puts together) the two strings (mind the space)
-- `succ`: this value indicates that the function succeeded 
+- `ok`: this value indicates that the function succeeded 
 
 ## The `Result` Type
 
 The `Result(T, E)` type is a really nice one. For you rustaceans it's about identical to Rust's `Result<T, E>`. 
 
-A result is a type that has 2 variants: `succ(T)` and `err(E)`. It means each variant may have a payload value. In the function type `Result(Void, #failure)` we expect the function to return either `succ` (with no payload) or `err(...)` with a payload value of type `#failure`.
+A result is a type that has 2 variants: `ok(T)` and `err(E)`. It means each variant may have a payload value. In the function type `Result(Void, Error)` we expect the function to return either `ok` (with no payload) or `err(...)` with a payload value of type `Error`.
 
-`#error` is a tag, tags will be explained later but thing of a tag as a Java interface. It can be used as a type that a lot of different types can be casted to. It represents the group of types that can be used to represent a failure. For instance a `String` is tagged as `#error` since it can be used as a simple generic error message.
+`Error` is an interface, interfaces will be explained later but think of an interface as a Java interface. It can be used as a type that a lot of different types can be casted to. It represents the group of types that can be used to represent a failure. For instance a `String` implements `Error` since it can be used as a simple generic error message.
 
-`readln` is a function that takes no arguments and return `Result(String, IOError)` so we can use `??` to extract the `String` if it's a `succ` or early return from `main` if it's an `err` (`IOError` is `#error`)
+`readln` is a function that takes no arguments and return `Result(String, IOError)` so we can use `??` to extract the `String` if it's an `ok` or early return from `main` if it's an `err` (`IOError` is `Error`)
 
 There are some operators for the `Result` type, they are:
-- `res??` unwraps the result `res` if `succ` otherwise shortcircuits the function with `err`
-- `res?!` unwraps the result `res` if `succ` and panics otherwise
-- `res ?= expr` unwraps the result `res` if `succ` or uses `expr` otherwise
+- `res??` unwraps the result `res` if `ok` otherwise shortcircuits the function with `err`
+- `res?!` unwraps the result `res` if `ok` and panics otherwise
+- `res ?= expr` unwraps the result `res` if `ok` or uses `expr` otherwise
 
 Talking about `if`, I think it's time to talk about [control flow in Aura](./004-control-flow.md)
